<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".MainActivity"
                android:background="@android:color/black">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView11"
        android:src="@drawable/zombie"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/mainTitle"
        android:id="@+id/mainTitleTextView"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="40sp"
        android:textAlignment="center"
        android:textIsSelectable="false"
        android:background="#00ffffff"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="77dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fourPlayerButtonText"
        android:id="@+id/fourPlayerButton"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_red_dark"
        android:background="#5640ec1f"
        android:textSize="24sp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sixPlayerButtonText"
        android:id="@+id/sixPlayerButton"
        android:textColor="@android:color/holo_red_dark"
        android:background="#5640ec1f"
        android:layout_below="@+id/fourPlayerButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:textSize="24sp"/>

</RelativeLayout>
