<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="atchley.chris.zombiepositions.FourPlayerActivity"
                android:gravity="fill_horizontal"
                android:background="@android:color/black">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:weightSum="5">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:weightSum="2"
            android:layout_weight="5">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:weightSum="2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:layout_weight="0"
                    android:src="@drawable/rover"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView2"
                    android:layout_weight="1"
                    android:src="@drawable/window"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:weightSum="2">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView3"
                    android:layout_weight="1"
                    android:src="@drawable/stairs"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView4"
                    android:layout_weight="1"
                    android:src="@drawable/balcony"
                    android:scaleType="fitXY"
                    android:adjustViewBounds="true"/>

            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/playerRandButton"
            android:id="@+id/playerRandButton"
            android:layout_weight="0"
            android:background="@android:color/holo_red_light"
            android:textSize="24sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/roverText"
        android:layout_marginTop="120dp"
        android:layout_marginLeft="40dp"
        android:id="@+id/roverTextView"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:textSize="30sp"
        android:singleLine="false"
        android:textColor="#ffff1012"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stairsText"
        android:layout_marginTop="250dp"
        android:layout_marginLeft="230dp"
        android:id="@+id/stairsTextView"
        android:textSize="30sp"
        android:textColor="#ffff1012"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/windowText"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="40dp"
        android:id="@+id/windowTextView"
        android:textSize="30sp"
        android:textIsSelectable="false"
        android:textColor="#ffff1012"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/balconyText"
        android:layout_marginTop="320dp"
        android:layout_marginLeft="210dp"
        android:id="@+id/balconyTextView"
        android:textSize="30sp"
        android:textColor="#ffff1012"/>

</RelativeLayout>
